# ssa-hs

./: LICENSE  README.md  ssa-hs.cabal  stack.yaml
app/: Main.hs
models/: gene_expression
src/SSA/: Expr.hs  Model.hs  Parser.hs  SSA.hs
test/: Spec.hs
