name:                ssa-hs
version:             0.1.0.0
synopsis:            Stochastic simulation algorithm (SSA)
description:         Please see README.md
homepage:            http://github.com/githubuser/ssa-hs#readme
license:             BSD3
license-file:        LICENSE
author:              Michael Backenköhler
maintainer:          m.backenkoehler@gmail.com
copyright:           2016 Michael Backenköhler
category:            Scientific
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:
    src
  exposed-modules:
    SSA.Parser,
    SSA.Model,
    SSA.Expr,
    SSA.SSA
  build-depends:
    base >= 4.7 && < 5,
    parsec >= 3.1,
    vector,
    text,
    random,
    transformers
  default-language:
    Haskell2010

executable ssa-hs-exe
  hs-source-dirs:
    app
  main-is:
    Main.hs
  ghc-options:
    -threaded -rtsopts -with-rtsopts=-N
  build-depends:
    base,
    ssa-hs,
    transformers,
    optparse-generic,
    text
  default-language:
    Haskell2010

test-suite ssa-hs-test
  type:
    exitcode-stdio-1.0
  hs-source-dirs:
    test
  main-is:
    Spec.hs
  build-depends:
    base,
    ssa-hs
  ghc-options:
    -threaded -rtsopts -with-rtsopts=-N
  default-language:
    Haskell2010

source-repository head
  type:
    git
  location:
    https://github.com/githubuser/ssa-hs
